Feedback from user testing:  Expand safe margin in fixed toolbox.  Remove speed control.  Restore and fix whack sound.  Allow overlapping sounds.  Move maze sounds to maze.
git-svn-id: http://blockly.googlecode.com/svn/trunk@736 c400ca83-b69d-9dd7-9705-49c6b8615e23

--- a/apps/maze/style.css
+++ b/apps/maze/style.css
@@ -92,22 +92,6 @@ iframe {
   border: 1px solid #ccc;
 }
 
-/* Slider. */
-.sliderTrack {
-  stroke: #aaa;
-  stroke-width: 6px;
-  stroke-linecap: round;
-}
-.sliderKnob {
-  fill: #ddd;
-  stroke: #bbc;
-  stroke-width: 1px;
-  stroke-linejoin: round;
-}
-.sliderKnob:hover {
-  fill: #eee;
-}
-
 /* Sprited icons. */
 .random  {
   height: 21px;
